@@ -45,6 +45,7 @@ pref("extensions.avim.auto.viqrStar", false);
 pref("extensions.avim.scriptMonitor.enabled", true);
 pref("extensions.avim.scriptMonitor.avim", true);
 pref("extensions.avim.scriptMonitor.chim", false);
+pref("extensions.avim.scriptMonitor.google", true);
 pref("extensions.avim.scriptMonitor.mudim", true);
 pref("extensions.avim.scriptMonitor.mViet", true);
 pref("extensions.avim.scriptMonitor.vietImeW", false);
